# HS-FinancialServices

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
load_generator/: CMakeLists.txt
load_generator/include/: client_session.hpp  metrics_collector.hpp
load_generator/src/: client_session.cpp  main.cpp  metrics_collector.cpp
server/: CMakeLists.txt
server/include/: protocol.hpp  server.hpp  service_router.hpp  session.hpp
server/include/services/: position_service.hpp  price_history_service.hpp  sql_service.hpp  trade_service.hpp
server/src/: main.cpp  server.cpp  session.cpp
server/src/services/: position_service.cpp  price_history_service.cpp  sql_service.cpp  trade_service.cpp
ui_client/: CMakeLists.txt
ui_client/res/: HSClientApp.rc  resource.h
ui_client/src/: HSClientApp.cpp  HSClientApp.h  MainDlg.cpp  MainDlg.h  stdafx.cpp  stdafx.h
